force-app/main/default/objects/Product_Sales__c.object
<CustomObject>
    <fields>
        <fullName>Award_To__c</fullName>
        <label>Award To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Period_From__c</fullName>
        <label>Contract Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Period_To__c</fullName>
        <label>Contract Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Source__c</fullName>
        <label>Customer Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Customer</fullName>
                </value>
                <value>
                    <fullName>Multiple Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharging_Period_From__c</fullName>
        <label>Discharging Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharging_Period_To__c</fullName>
        <label>Discharging Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>For__c</fullName>
        <label>For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                </value>
                <value>
                    <fullName>LABIX</fullName>
                </value>
                <value>
                    <fullName>TLB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loading_Period_From__c</fullName>
        <label>Loading Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loading_Period_To__c</fullName>
        <label>Loading Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>More_Detail__c</fullName>
        <label>More Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Terms_Conditions__c</fullName>
        <label>Other Terms &amp; Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thaioil GT&amp;C</fullName>
                </value>
                <value>
                    <fullName>As per last deal done between</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Others_Reason__c</fullName>
        <label>Others Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash in advance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Unit__c</fullName>
        <label>Price Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD/MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Period_Other__c</fullName>
        <label>Pricing Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Period__c</fullName>
        <label>Pricing Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Float</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GASOHOL 95 (YGH95)</fullName>
                </value>
                <value>
                    <fullName>AUTOMOTIVE GASOIL (50 PPM)</fullName>
                </value>
                <value>
                    <fullName>BASE OIL 500SN</fullName>
                </value>
                <value>
                    <fullName>BASE OIL 150BS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_Per__c</fullName>
        <label>Quantity Per</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Approval_Rejection_Cancellati__c</fullName>
        <label>Reason for Approval/Rejection/Cancellati</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sale_Method__c</fullName>
        <label>Sale Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bidding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Sales</label>
    <nameField>
        <displayFormat>PAFN-{YYYY}-{0000}</displayFormat>
        <label>Approval Form No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>